sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: '<-' expected but '=' found.
	for (i=1 to getNombreValeurs()-1) {
              ^AlgInsertionSort:12: error: illegal start of simple expression
}
^